# ajvm

./: CMakeLists.txt  Makefile  trace.c  wvm.c
